[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "shyft-solana"
version = "0.1.0"
description = "Python client for Shyft on Solana with batching, key rotation, trade parsing, and OHLCV utilities."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Otabek Juraev" }
]
keywords = ["solana", "shyft", "web3", "rpc", "asyncio", "ohlcv"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.25,<1",
]

[project.urls]
Homepage = "https://github.com/BeckVision/shyft-solana"
Repository = "https://github.com/BeckVision/shyft-solana"

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
